# udon

./: CLAUDE.md  FULL-EBNF.md  FULL-SPEC-supplement.md  FULL-SPEC.md  NEXT.md  README.md  SPEC-INDENTS.md  SPEC-UPDATE.md  SPEC.md  TIME-SPEC.md  analysis.md  feedback.md  implementation-phase-2.md  integration-with-semachrome.md  markup-feature-matrix.md  parser-strategy.md  positioning.md  udon-agentic.md  udon-ast.md  udon-paths.md
_archive/: SPEC.md
crates/: Cargo.toml
crates/generator/: bootstrap.machine  genmachine  genmachine-rs  udon-wip.machine  udon.machine
crates/generator/templates/: parser.c  parser.h  parser.rs.liquid
crates/udon-core/: Cargo.toml
crates/udon-core/benches/: parse.rs
crates/udon-core/src/: event.rs  lib.rs  parser.rs  span.rs  value.rs
crates/udon-core/tests/: parsing.rs
crates/udon-ffi/: Cargo.toml
crates/udon-ffi/src/: lib.rs
crates/udon-ruby/: Cargo.toml
crates/udon-ruby/src/: lib.rs
docs/: AGENT-CONTEXT-PROTOCOL.md  GRAMMAR-CONSTRAINED-GENERATION.md  UDON-AGENT-TOOLS.md  UDON-AS-ACP-FORMAT.md
examples/: archema-operata.udon  ash-like-billing.udon  ash-like-inventory.udon  ash-like-support.udon  cheatsheet.udon  comprehensive.udon  docbook-fo-table.udon  docbook-graphics.udon  mathml-to-latex.udon  minimal.udon  operata-intent-graph.udon  practices-gotchas.udon  schema-dsl.udon
lib/: udon.rb  udon_validator.rb
test/: bench_approaches.rb  bench_batch.rb  bench_ffi_calls.rb  bench_ruby_overhead.rb  benchmark.rb  test_ffi.rb
test/usability/: ETHICS.md  analyze_chunks.rb  analyze_embeddings.rb  embed_sentences.rb  enablement-synthesis.md  run
test/usability/lib/: context_comparison.rb  realistic_tests.rb  test_definitions.rb  topic_enablement.rb  usability_library.rb  usability_tester.rb  validated_tests.rb
test/usability/results/: AGENT_FEEDBACK.md  udon-context_comparison-20251223-214056-1d38120e.yaml  (+127 more)
tree-sitter-udon/: .gitignore  README.md  binding.gyp  grammar.js  package.json  tree-sitter.json
tree-sitter-udon/queries/: highlights.scm  injections.scm  locals.scm
tree-sitter-udon/src/: grammar.json  node-types.json  scanner.c
(+5 files in other folders)
