[workspace]
members = ["udon-core", "udon-ffi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Joseph Wecker"]
description = "UDON parser - Universal Document & Object Notation"

[workspace.dependencies]
unicode-xid = "0.2"
memchr = "2.7"

# Dev dependencies
criterion = "0.5"
pretty_assertions = "1.4"
