[package]
name = "udon-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "C FFI bindings for the UDON parser"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
udon-core = { path = "../udon-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
